--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
-install:
-  - pip install tox
-script:
-  - tox
+python:
+    - 2.7
+    - 3.3
+    - 3.4
+script: python setup.py test
